components/navigation/navigation.css
@import url(/components/colors.css);
.nav {
  width: 100%;
  display: flex;
  align-items: baseline;
  justify-content: space-between;
  border-bottom: 2px solid var(--secondary-color);
  padding: 0.5rem 1rem;
  flex-wrap: wrap;
}
.nav-header {
  color: var(--primary-color);
}
.nav-search-bar {
  width: 50%;
  flex-shrink: 1;
  display: flex;
  align-items: center;
  position: relative;
}

.nav-search-bar button {
  position: absolute;
  right: 0;
  background-color: transparent;
}
.nav-list {
  display: flex;
  align-items: baseline;
  justify-content: space-between;
}
.nav-list li {
  flex-shrink: 0;
}

@media only screen and (max-width: 1000px) {
  .nav-search-bar {
    display: none;
  }
}

